# ftc_ws

./: docx.md
src/INDI/: CMakeLists copy.txt  CMakeLists.txt  package.xml
src/INDI/configs/: traj.rviz  vec_env.yaml
src/INDI/include/INDI/: uav_simulator.hpp  vec_env.hpp
src/INDI/rl/: MLP_policy.py  PPO.py  bootstrapped_continuous_critic.py  eval copy.py  eval.py  eval_gpu.py  eval_rotors.py  replay_buffer.py  rl_model.py  utils.py
src/INDI/rl/log_data/rl_model02-03-2024_20-58-31/: events.out.tfevents.1709384312.OMEN
src/INDI/rl/log_data/rl_model02-03-2024_23-33-28/: events.out.tfevents.1709393609.OMEN
src/INDI/rl/log_data/rl_model02-03-2024_23-39-43/: events.out.tfevents.1709393984.OMEN
src/INDI/rl/log_data/rl_model02-03-2024_23-41-53/: events.out.tfevents.1709394114.OMEN
src/INDI/rl/log_data/rl_model03-03-2024_11-16-15/: events.out.tfevents.1709435776.OMEN
src/INDI/rl/log_data/rl_model03-03-2024_12-30-19/: events.out.tfevents.1709440220.OMEN
src/INDI/rl/log_data/rl_model03-03-2024_22-33-03/: events.out.tfevents.1709476384.OMEN
src/INDI/rl/log_data/rl_model03-03-2024_22-36-24/: events.out.tfevents.1709476584.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_10-38-26/: events.out.tfevents.1709519908.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_13-09-05/: events.out.tfevents.1709528946.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_13-16-51/: events.out.tfevents.1709529412.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_13-34-20/: events.out.tfevents.1709530461.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_17-16-45/: events.out.tfevents.1709543806.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_19-14-40/: events.out.tfevents.1709550881.OMEN
src/INDI/rl/log_data/rl_model04-03-2024_22-16-05/: events.out.tfevents.1709561765.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_09-46-28/: events.out.tfevents.1709603189.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_10-40-07/: events.out.tfevents.1709606408.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_13-03-19/: events.out.tfevents.1709615000.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_13-45-33/: events.out.tfevents.1709617534.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_15-41-10/: events.out.tfevents.1709624471.OMEN
src/INDI/rl/log_data/rl_model05-03-2024_15-43-54/: events.out.tfevents.1709624635.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_10-45-24/: events.out.tfevents.1709693124.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_10-47-38/: events.out.tfevents.1709693259.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_10-49-11/: events.out.tfevents.1709693352.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_10-51-46/: events.out.tfevents.1709693507.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_11-02-22/: events.out.tfevents.1709694142.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_11-32-22/: events.out.tfevents.1709695943.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_11-37-58/: events.out.tfevents.1709696279.OMEN
src/INDI/rl/log_data/rl_model06-03-2024_16-46-22/: events.out.tfevents.1709714783.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_09-20-24/: events.out.tfevents.1709860825.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_09-22-55/: events.out.tfevents.1709860976.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_11-25-14/: events.out.tfevents.1709868315.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_11-30-57/: events.out.tfevents.1709868658.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_11-31-57/: events.out.tfevents.1709868718.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_12-35-38/: events.out.tfevents.1709872539.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_13-05-09/: events.out.tfevents.1709874310.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_14-41-24/: events.out.tfevents.1709880085.OMEN
src/INDI/rl/log_data/rl_model08-03-2024_15-25-51/: events.out.tfevents.1709882752.OMEN
src/INDI/rl/log_data/rl_model09-03-2024_10-21-44/: events.out.tfevents.1709950905.OMEN
src/INDI/rl/log_data/rl_model09-03-2024_10-39-32/: events.out.tfevents.1709951973.OMEN
src/INDI/rl/log_data/rl_model09-03-2024_12-05-29/: events.out.tfevents.1709957130.OMEN
src/INDI/rl/log_data/rl_model09-03-2024_12-13-23/: events.out.tfevents.1709957604.OMEN
src/INDI/rl/log_data/rl_model09-03-2024_15-21-39/: events.out.tfevents.1709968900.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_11-45-27/: events.out.tfevents.1710042327.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_13-02-02/: events.out.tfevents.1710046923.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_15-18-37/: events.out.tfevents.1710055118.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_15-20-33/: events.out.tfevents.1710055234.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_16-23-45/: events.out.tfevents.1710059026.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_16-24-24/: events.out.tfevents.1710059065.OMEN
src/INDI/rl/log_data/rl_model10-03-2024_19-12-39/: events.out.tfevents.1710069160.OMEN
src/INDI/scripts/: flight_mare_model.py  mpc copy.py  mpc.py  rotors_model.py  tes1.py  test.py  test2.py  uav_model.py  vec_env.py
src/INDI/scripts/json_files/: mpc_UAV_acados.json  sim_UAVModel_acados.json  sim_model1_acados.json
src/INDI/src/: pybind_wrapper.cpp  test.cpp  uav_simulator.cpp  vec_env.cpp
src/fdd/: CMakeLists.txt  package.xml
src/fdd/include/fdd/: particle_filter.hpp  uav_simulator.hpp
src/fdd/launch/: test.launch
src/fdd/scripts/: mpc_without_fault.py  particle_filter copy.py  particle_filter.py  particle_filter_cpp.py  test.py  test_cpp copy.py  test_cpp.py  test_rotors.py
src/fdd/scripts/json_files/: mpc_UAVModel_acados.json  mpc_UAV_Without_Fault_acados.json  sim_UAVModel_acados.json  sim_UAVModel_acados_ocp.json
src/fdd/src/: particle_filter.cpp  pybind_wrapper.cpp  test.cpp  test2.cpp  uav_simulator.cpp
src/quadrotors_sim/: CMakeLists.txt  package.xml
src/quadrotors_sim/configs/: vec_env.yaml
src/quadrotors_sim/include/quadrotors_sim/: integrator.hpp  quad_param.hpp  simulator.hpp  utils.hpp  vec_env.hpp
src/quadrotors_sim/src/: main copy.cpp  main.cpp  pybind_wrapper.cpp  simulator.cpp  vec_env.cpp
(+17433 files in other folders)
